2008-02-17  Frank Lichtenheld  <djpig@debian.org>

	* scripts/Dpkg.pm: Allow overriding $pkgdatadir
	with $ENV{DPKG_DATADIR}.
	* scripts/Makefile.am (check): Use DPKG_DATADIR.
	* debian/rules: Remove hack to copy data files
	to build directory.


2008-02-17  Frank Lichtenheld  <djpig@debian.org>
	    Matthias Klose  <doko@cs.tu-berlin.de>

	* scripts/dpkg-buildpackage.pl: Set a set of environment variables
	for setting compiler and linker options, unless already set in the
	environment. See https://wiki.ubuntu.com/DistCompilerFlags for
	background information.

2008-02-13  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Version.pm: Import Dpkg::Gettext since we use _g().

2008-02-07  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl: Do not output the Homepage field on udeb.

2008-02-04  Guillem Jover  <guillem@debian.org>

	* libcompat/Makefile.am (localedir): Remove unused variable.
	(INCLUDES): Do not pass -DLOCALEDIR nor -I$(top_srcdir)/lib.

2008-02-03  Guillem Jover  <guillem@debian.org>

	* m4/funcs.m4 (DPKG_CHECK_COMPAT_FUNCS): New macro.
	* configure.ac (DPKG_CHECK_COMPAT_FUNCS): Check getopt, getopt_long
	and obstack_free.
	* libcompat/Makefile.am (libcompat_a_SOURCES): Set empty by default.
	Only add 'getopt.c getopt.h' if !HAVE_GETOPT. Only add 'getopt1.c'
	if !HAVE_GETOPT_LONG. Only add 'obstack.c obstack.h' if
	!HAVE_OBSTACK_FREE.
	(INCLUDES): Add '-idirafter $(top_srcdir)/libcompat'.
	* dpkg-deb/Makefile.am (INCLUDES): Likewise.
	* dpkg-split/Makefile.am (INCLUDES): Likewise.
	* dselect/Makefile.am (INCLUDES): Likewise.
	* lib/Makefile.am (INCLUDES): Likewise.
	* src/Makefile.am (INCLUDES): Likewise.
	* utils/Makefile.am (INCLUDES): Use -idirafter instead of -I for
	'$(top_srcdir)/libcompat'.

	* src/Makefile.am (dpkg_LDADD): Add '../libcompat/libcompat.a'.
	(dpkg_query_LDADD): Likewise.
	* dpkg-deb/Makefile.am (dpkg_deb_LDADD): Likewise.
	* dpkg-split/Makefile.am (dpkg_split_LDADD): Likewise.