@@ -48,6 +48,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * Add support for use of SHA1 and SHA256 checksums in .dsc and
     .changes files. Information will be available in Checksums-Sha{1,256}
     fields. .changes format version increased to 1.8.
+  * Link dselect against libncursesw. Closes: #466321
 
   [ Updated dpkg translations ]
   * Korean (Changwoo Ryu).
