@@ -1,3 +1,10 @@
+2008-02-19  Frank Lichtenheld  <djpig@debian.org>
+
+	* m4/libs.m4 (DPKG_LIB_CURSES): Use libncursesw if
+	available.
+	* debian/control: Change build-dependency from
+	libncurses5-dev to libncursesw5-dev.
+
 2008-02-17  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/Dpkg.pm: Allow overriding $pkgdatadir
